kustomize/app/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kubecraftadmin-8
  name: kubecraftadmin-8
spec:
  ports:
  - name: 8000-tcp
    port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: kubecraftadmin-8
  type: ClusterIP
