kustomize/app/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: kubecraftadmin-8
  name: kubecraftadmin-8
spec:
  port:
    targetPort: 8000-tcp
  to:
    kind: Service
    name: kubecraftadmin-8
    weight: 100
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Allow
